# application-notifier

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  run_reminder.py
deploy/: openclaw-reminder-style-guide.txt  openclaw-reminder-wrapper.sh
deploy/systemd/: application-notifier-evening.service  application-notifier-evening.timer  application-notifier-morning.service  application-notifier-morning.timer
src/application_notifier/: __init__.py  backend_client.py  cli.py  config.py  czm_config.py  fallback_renderer.py  models.py  openclaw_bridge.py  orchestration.py  payload_builder.py  resolver.py  selector.py
tests/: test_config_resolution.py  test_fallback_renderer.py  test_openclaw_bridge.py  test_orchestration.py  test_payload_builder.py  test_selector.py
